Modal overflow fixed,controll scheme and lpbs scheme, download motor details template fixed

--- a/components/Project Management/Electrical Load List/Electrical Load List/LoadListComponent.css
+++ b/components/Project Management/Electrical Load List/Electrical Load List/LoadListComponent.css
@@ -3,3 +3,7 @@ td {
   text-align: center;
   text-wrap: auto;
 }
+
+table{
+  font-size: 13px;
+}
